Modifier error msgs not showing. #58700

Closed
opened 2018-12-04 11:46:53 +01:00 by Dspazio · 3 comments

System Information
Operating system:W10 64bits home
Graphics card: Geforce 105M

Also tested on GTX 1080ti & W10 64Bits pro

Blender Version
Broken: blender2.8, 2018-12-03)
Worked: (no one of 2.8 since beta)

Short description of error

Modifiers aren't showing error messages. I.E. weighted normals modifier should show: "enable autosmooth..." with an exclamation icon.

Exact steps for others to reproduce the error
Start blender, add weighted normal modifier to cube. No message telling the user: "enable autosmooth.."

**System Information** Operating system:W10 64bits home Graphics card: Geforce 105M Also tested on GTX 1080ti & W10 64Bits pro **Blender Version** Broken: blender2.8, 2018-12-03) Worked: (no one of 2.8 since beta) **Short description of error** Modifiers aren't showing error messages. I.E. weighted normals modifier should show: "enable autosmooth..." with an exclamation icon. **Exact steps for others to reproduce the error** Start blender, add weighted normal modifier to cube. No message telling the user: "enable autosmooth.."
Author

Added subscriber: @Dspazio

Added subscriber: @Dspazio
Bastien Montagne self-assigned this 2018-12-04 11:56:33 +01:00

This issue was referenced by 6a0c25b447

This issue was referenced by 6a0c25b44721715574759bd0455ba1f33b3f3dae

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58700
No description provided.