Fix T58700: Modifier error msgs not showing.

We need to copy those back from evaluated modifierdata to orig one (as
part of `BKE_object_synchronize_to_original()`).